[package]
name = "ket-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
ket-cas.workspace = true
ket-dag.workspace = true
ket-sql.workspace = true
ket-cdom.workspace = true
ket-agent.workspace = true
ket-score.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
